Update Yamler to Snakeyaml 2.0, Bungee 1.20+, Spigot-API 1.20+